--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/libusb"]
 	path = lib/libusb
-	url = https://github.com/libusb/libusb-cmake.git
+	url = https://github.com/TrekMax/libusb-cmake.git
